# ffizer

tmp/: .gitignore  README.md  pyproject.toml  setup_localdev.sh
tmp/.devcontainer/: Dockerfile  action.yml  devcontainer-setup.sh  devcontainer.json
tmp/.ffizer/: options.yaml
tmp/.github/workflows/: ci.yml  lib_release.yml
tmp/src/blbl/: prepare_run.py  run_pipeline.py
tmp/src/blbl/models/: mymodule.py
tmp/src/blbl/steps/: convert.py  test.py  train.py
tmp/src/blbl/utils/: testing.py
tmp/src/hydra_configs/: base.yaml
tmp/src/hydra_configs/bentoml/: default.yaml
tmp/src/hydra_configs/callbacks/: default.yaml  early_stopping.yaml  lr_monitoring.yaml  model_summary.yaml  rich_progress_bar.yaml
tmp/src/hydra_configs/data/: mydatamodule.yaml
tmp/src/hydra_configs/dev/: default.yaml  fdr.yaml  limit.yaml  overfit.yaml  profiler.yaml
tmp/src/hydra_configs/experiment/: exp1.yaml
tmp/src/hydra_configs/hydra/: default.yaml
tmp/src/hydra_configs/logger/: neptune.yaml
tmp/src/hydra_configs/model/: mymodule.yaml
tmp/src/hydra_configs/neptune/: offline.yaml  online.yaml
tmp/src/hydra_configs/paths/: s3.yaml
tmp/src/hydra_configs/steps/: convert.yaml  test.yaml  train.yaml
tmp/src/hydra_configs/trainer/: default.yaml
tmp/src/ilil/: __init__.py  prepare_run.py  run_pipeline.py
tmp/src/ilil/steps/: convert.py  test.py  train.py
tmp/src/lele/: __init__.py  prepare_run.py  run_pipeline.py
tmp/src/lele/data/: mydatamodule.py
tmp/src/lele/steps/: convert.py  test.py  train.py
tmp/tests/: conftest.py  test_pipeline.py  test_version.py
(+10 files in other folders)
